--- a/src/gameXucXac/components/index.css
+++ b/src/gameXucXac/components/index.css
@@ -3,7 +3,7 @@
     src: url('./assets/font/Pony.ttf');
 }
 
-.game {
+.game_XucXac {
     background-image: url('./assets/bgGame.jpg');
     background-size: cover;
     background-position: center center;
@@ -32,4 +32,35 @@
     width: 50px;
     height: 50px;
     margin: 50px 3px;
+    border-radius: 15px;
+}
+.infoText{
+    font-size: 50px;
+}
+
+@media screen and (max-width: 768px){
+    .btnGame{
+        width: 150px;
+        height: 150px;
+        font-size: 30px;
+    }
+    .infoText{
+        font-size: 30px;
+    }
+}
+
+@media screen and (max-width: 596px){
+    .btnGame{
+        width: 100px;
+        height: 100px;
+        font-size: 20px;
+    }
+    .xucXac{
+        width: 30px;
+        height: 30px;
+        margin: 50px 3px;
+        border-radius: 5px;
+    }
+    
+    
 }
